# pyportable-crypto

./: .gitignore  CHANGELOG.md  README.md  README.zh.md  pyproject.toml  requirements.dev.txt  requirements.txt
docs/: cythonize-known-issues.zh.md
dropped_scheme/cipher_gen_with_pickle_serialization/cipher_gen/: cipher_standalone.py  generator.py
dropped_scheme/cipher_gen_with_pickle_serialization/cipher_gen/template/: cipher.txt
examples/: eg_01.py  eg_02.py  readme.txt  test01.py
lib/pyaes_snippet/: README.md  pyaes_snippet.py
offensive_and_defensive_tests/: hijack_AESModeOfOperationCBC.py  test_02.py
pyportable_crypto/: __init__.py  __main__.py  _io.py  compiler.py  decrypt.py  encrypt.py  formatter.py  inject.py  keygen.py
pyportable_crypto/cipher_gen/: __init__.py  cipher_standalone.py  cythonize.py  generator.py  publish.py
pyportable_crypto/cipher_gen/template/: __init__.txt  cipher.txt  dill_loader.py
pyportable_crypto/compilation/: __init__.py  api.py  compiler.py
pyportable_crypto/encryption/: __init__.py  _pyaes_snippet.py  decrypt.py  encrypt.py  formatter.py  keygen.py
pyportable_crypto/key_machine/: __init__.py  random_generator.py
sidework/: cythonize.py  generate_custom_cipher_package.py
test/: chacha20_crypto.py  compile_package_test.py
