[project]
name = "pyportable-crypto"
version = "1.5.0"

authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
description = "Crypto plugin for pyportable-installer project."
dynamic = ["dependencies"]
exclude = ["pyportable_crypto/cipher_gen/_cache/*/"]
license = "MIT"
packages = [{ include = "pyportable_crypto" }]
requires-python = ">=3.8"

[project.urls]
homepage = "https://github.com/likianta/pyportable-crypto"

[tool.poetry.dependencies]
python = "^3.8"
argsense = "^1.1.0"
cython = "^3.1.2"
lk-logger = "^6.0.6"
lk-utils = "^3.2.1"
# setuptools = "^70.0.0"
setuptools = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
