[project]
name = "pyportable-crypto"
version = "1.5.2b3"
description = "Crypto plugin for pyportable-installer project."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
exclude = ["pyportable_crypto/cipher_gen/_cache/*/"]
# license = "MIT"
# readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argsense>=1.2.0a7",
    "cython>=3.2.5",
    "lk-utils>=3.6.0b21",
    "neoprint>=0.1.3",
    "setuptools>=82.0.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.29.0"]

# [dependency-groups]
# dev = []

# [project.optional-dependencies]
# ...

# [project.scripts]
# ...

[project.urls]
homepage = "https://github.com/likianta/pyportable-crypto"

[tool.hatch.build.targets.wheel]
packages = ["pyportable_crypto"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
skip-magic-trailing-comma = true

# [tool.ruff.lint]
# extend-select = ["I001", "E501"]

[tool.ruff.lint.isort]
force-single-line = true
# no-sections = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# [tool.ty.environment]
# extra-paths = ["./lib"]

# [tool.ty.rules]
# invalid-type-form = "ignore"
# unresolved-attribute = "ignore"

[tool.uv]
prerelease = "allow"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "likianta"
url = "http://localhost:2191/"
# explicit = true

[tool.uv.sources]
argsense = { index = "likianta" }
lk-utils = { index = "likianta" }
neoprint = { index = "likianta" }
